MMCPA-1238: Aligning the checkout progress bar with line height for safari ipad, fixing travis.

--- a/docroot/themes/custom/alshaya_white_label/sass/components/cart/_checkout-progress.scss
+++ b/docroot/themes/custom/alshaya_white_label/sass/components/cart/_checkout-progress.scss
@@ -52,7 +52,7 @@
     @include breakpoint($only-tablet) {
       &:not(.-has-link) {
         .safari & {
-          line-height: 2.0;
+          line-height: 2;
         }
       }
     }
